feat: add footer and tweak timeline elements

--- a/inst/app/www/styling.css
+++ b/inst/app/www/styling.css
@@ -332,3 +332,8 @@ tl-item.active .tl-dot:before {
 .fifth-panel {
   background: #2F3C4F;
 }
+
+/* FOOTER */
+.footer-panel {
+  background: #6EB2CD;
+}
