--- a/inst/app/www/styling.scss
+++ b/inst/app/www/styling.scss
@@ -334,3 +334,9 @@ tl-item.active .tl-dot:before {
 .fifth-panel {
   background: $second-bgcolour
 }
+
+
+/* FOOTER */
+.footer-panel {
+  background: #6EB2CD
+}
