--- a/inst/app/www/styling.css
+++ b/inst/app/www/styling.css
@@ -1,10 +1,31 @@
+@charset "UTF-8";
 /* -------------- Section 1 - Defaults ------------ */
 /* --------------- Section 2 - Generic styles -------------- */
-p, li {
+p {
   font-family: Nunito;
   color: #2F3C4F;
   font-size: 16px;
   text-align: center;
+}
+
+h6 {
+  font-family: Nunito;
+  color: #2F3C4F;
+  font-size: 16px;
+}
+
+li {
+  font-family: Nunito;
+  color: #2F3C4F;
+  font-size: 16px;
+}
+
+.checkmark {
+  list-style: none;
+}
+
+.checkmark::before {
+  content: '✓';
 }
 
 /* --------------- Section 3 - Specific Styles -------------- */
@@ -97,8 +118,18 @@ p, li {
 }
 
 .about-me {
-  padding: 10%;
+  padding: 2%;
+  padding-left: 15%;
+  padding-right: 15%;
   text-align: center;
+}
+
+.expertise {
+  padding: 5%;
+}
+
+.other-experience {
+  padding: 5%;
 }
 
 /* THIRD CONTAINER - PROJECTS */
@@ -331,6 +362,19 @@ tl-item.active .tl-dot:before {
 /* FIFTH CONTAINER */
 .fifth-panel {
   background: #2F3C4F;
+  padding-bottom: 5%;
+}
+
+.bg-desc {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  border-radius: 3%;
+}
+
+.carousel-item img {
+  width: auto;
+  height: 450px;
+  max-height: 450px;
 }
 
 /* FOOTER */
