--- a/inst/app/www/styling.css
+++ b/inst/app/www/styling.css
@@ -110,6 +110,12 @@ li {
   text-align: center;
 }
 
+.panel-paragraph-second {
+  font-family: Nunito;
+  color: #ffffff;
+  text-align: center;
+}
+
 .details {
   padding-top: 5%;
   padding-left: 20%;
@@ -375,6 +381,14 @@ tl-item.active .tl-dot:before {
   width: auto;
   height: 450px;
   max-height: 450px;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='black'><path d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/></svg>");
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='black'><path d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/></svg>");
 }
 
 /* FOOTER */
